Formatted mobile layout css

--- a/css/main.css
+++ b/css/main.css
@@ -97,24 +97,37 @@ footer {
   flex-flow: row wrap; 
    }
 
+header {
+  padding: 15px 0; 
+}
+
 
 header .content-wrapper {
   display: flex;
   justify-content: center;
   align-items: center; 
   flex-flow: row wrap; 
+  margin: 0; 
 }
 
 header nav {
   display: flex;
   justify-content: space-around;
   align-items: center; 
-  flex-flow: row wrap; 
+  flex-flow: row wrap;
+  width: 60%;  
 }
 
 header nav ul {
+  list-style: none; 
   display: flex;
   justify-content: space-around;
+  width: 43%; 
+  padding: 15px 0;
+}
+
+header .header-divider {
+  width: 100%; 
 }
 
 footer .social-icons {
@@ -129,7 +142,26 @@ footer .social-icons p {
   align-items: center;
 }
 
+footer .content-wrapper {
+  width: 55%; 
+  margin: 50px 0; 
+}
+
+footer {
+  padding-top: 50px; 
+}
+
+footer p {
+  margin: 0; 
+}
+
+
 /* -------------------- Mobile Styles - Homepage -------------------- */
+
+.content-wrapper {
+  width: 90%; 
+}
+
 
 /* Hero Area */
 
@@ -146,6 +178,8 @@ aside {
   justify-content: center;
   align-items: center; 
   flex-flow: row wrap; 
+  padding-top: 15px;
+  padding-bottom: 90px; 
 }
 
 /* Features */
@@ -163,13 +197,35 @@ aside {
   flex-flow: row wrap;
 }
 
+.features article {
+  width: 47%; 
+}
+
+.features h2 {
+  padding-top: 50px; 
+}
+
+.features {
+  padding-bottom: 65px; 
+}
+
+.features p {
+  margin: 0; 
+}
+
 /* Reviews */
 
 .reviews {
   display: flex;
   justify-content: center;
   flex-flow: row wrap;
+  padding: 50px 0;
 }
+
+.reviews h3 {
+  width: 48%; 
+}
+
 
 /* ==========================================================================
    About Page
@@ -180,6 +236,7 @@ aside {
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
+  padding: 45px 0; 
 }
 
 .contact-section {
@@ -187,6 +244,7 @@ aside {
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
+  padding: 45px 0; 
 }
 
 /* ==========================================================================
@@ -198,6 +256,7 @@ aside {
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
+  padding: 45px 0; 
 }
 
 .faq .content-wrapper {
