--- a/css/main.css
+++ b/css/main.css
@@ -151,7 +151,7 @@ footer {
   padding-top: 50px; 
 }
 
-footer p {
+footer p {x
   margin: 0; 
 }
 
@@ -357,16 +357,161 @@ aside {
    Modify as content requires.
    ========================================================================== */
 
-@media only screen and (min-width: 35em) {
-  /* Style adjustments for viewports that meet the condition */
+@media only screen and (min-width: 768px) {
+  /* General styles */
+
+  .content-wrapper {
+    max-width: 640px;
+    margin: 100px 0; 
+  }
+  
+  /* Header */
+
+  header {
+    justify-content: center; 
+  }
+
+  header .content-wrapper {
+    width: 
+    justify-content: center; 
+  }
+
+  header nav {
+    width: 
+  }
+
+  header nav ul {
+    justify-content: center; 
+  }
+
+  .header-divider {
+    display: none; 
+  }
+
+  /* Hero area */
+
+  /* Aside */
+
+  aside .content-wrapper {
+    margin: 50px 0; 
+    display: flex; 
+    justify-content: center;
+    flex-flow: row wrap; 
+  }
+
+  aside .content-wrapper .form-description, 
+  aside .content-wrapper .form {
+    width: 
+    margin: 0; 
+  }
+
+/* Features */
+
+.features article {
+  display: flex;
+  justify-content: center; 
+  align-items: center; 
+  flex-flow: row wrap; 
+  flex-basis: 
 }
 
-@media print,
-  (-webkit-min-device-pixel-ratio: 1.25),
-  (min-resolution: 1.25dppx),
-  (min-resolution: 120dpi) {
-  /* Style adjustments for high resolution devices */
+.features .features-item-description {
+  width: 
 }
+
+/* Reviews */
+
+.reviews article {
+  display: flex; 
+  justify-content: center; 
+}
+
+.reviews article div {
+  width:
+}
+
+/* FAQ */
+
+.faq-content {
+  flex-basis: 
+}
+
+/* Footer */
+
+footer .content-wrapper {
+  width: 
+  margin: 100px 0; 
+}
+
+.footer-content {
+  display: flex;
+  justify-content: center;
+  align-items: center; 
+}
+
+footer .contact {
+  margin-bottom: 0; 
+}
+
+footer .copyright {
+  width: 
+}
+
+
+/* ==========================================================================
+   About Page
+   ========================================================================== */
+ 
+   .mission-content {
+    display:
+    justify-content: space-between;
+    align-items: 
+}
+
+.mission-content p {
+    width: 
+}
+
+.contact-section .content-wrapper h2 {
+    width:
+}
+
+.contact-content {
+    display:
+    justify-content:
+    align-items:
+}
+
+
+/* ==========================================================================
+   FAQ Page
+   ========================================================================== */
+    .faq .content-wrapper {
+        justify-content: space-between;
+    }
+    
+    .faq-content {
+        flex-basis: 40%;
+    }
+ 
+    .faq h2 {
+        width: 100%;
+    }
+
+
+
+}
+
+
+
+
+
+
+@media only screen and (min-width: 1200px) {
+  /* Desktop styles here */
+}
+
+
 
 /* ==========================================================================
    Print styles.
