--- a/css/main.css
+++ b/css/main.css
@@ -87,8 +87,125 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
+/*** MOBILE FIRST STYLES ***/
+
+.content-wrapper {
+  width: 90%; 
+}
+
+header, footer {
+  display: flex; 
+  justify-content: center;
+  align-items: center; 
+  flex-flow: row wrap; 
+}
 
 
+header .content-wrapper {
+  display: flex; 
+  justify-content: center;
+  align-items: center;
+  flex-flow: row wrap;
+}
+
+header nav {
+  display: flex; 
+  flex-flow: row wrap;
+}
+
+.hero-area h1 {
+  text-align: left; 
+  padding-left: 15px; 
+}
+
+aside {
+  display: flex; 
+  justify-content: center;
+  align-items: center;
+  flex-flow: row wrap;
+}
+
+
+aside .form {
+  display: flex; 
+  justify-content: center;
+  align-items: center;
+  flex-flow: row wrap;
+}
+
+.features {
+  display: flex; 
+  justify-content: center;
+  align-items: center;
+  flex-flow: row wrap;
+}
+
+.features .content-wrapper {
+  display: flex; 
+  justify-content: center;
+  align-items: center;
+  flex-flow: row wrap;
+}
+
+.reviews {
+  display: flex; 
+  justify-content: center;
+  align-items: center;
+  flex-flow: row wrap;
+}
+
+.reviews .content-wrapper {
+  display: flex; 
+  justify-content: center;
+  align-items: center;
+  flex-flow: row wrap;
+}
+
+
+footer .contact {
+  width: 100%; 
+}
+
+footer h4 {
+  text-align: center; 
+  width: 100%;
+}
+
+footer p {
+  text-align: center; 
+}
+
+
+footer .social {
+  display: flex;
+  justify-content: center;
+  align-items: center; 
+  flex-flow: row wrap; 
+}
+
+/*** ABOUT PAGE ***/
+
+.mission .content-wrapper {
+  display: flex; 
+  justify-content: center;
+  align-items: center;
+  flex-flow: row wrap; 
+  padding: 0 20px; 
+}
+
+
+.contact-section {
+  display: flex;  
+  justify-content: center;
+  align-items: center;
+  flex-flow: row wrap; 
+}
+
+/*** FAQ PAGE ***/
+
+.faq {
+  padding: 0 20px; 
+}
 
 
 
@@ -174,165 +291,7 @@ textarea {
   clear: both;
 }
 
-/* ==========================================================================
-   EXAMPLE Media Queries for Responsive Design.
-   These examples override the primary ('mobile first') styles.
-   Modify as content requires.
-   ========================================================================== */
 
-@media only screen and (min-width: 768px) {
-  /* General styles */
-
-  .content-wrapper {
-    max-width: 640px;
-    margin: 100px 0; 
-  }
-  
-  /* Header */
-
-  header {
-    justify-content: center; 
-  }
-
-  header .content-wrapper {
-    width: 
-    justify-content: center; 
-  }
-
-  header nav {
-    width: 
-  }
-
-  header nav ul {
-    justify-content: center; 
-  }
-
-  .header-divider {
-    display: none; 
-  }
-
-  /* Hero area */
-
-  /* Aside */
-
-  aside .content-wrapper {
-    margin: 50px 0; 
-    display: flex; 
-    justify-content: center;
-    flex-flow: row wrap; 
-  }
-
-  aside .content-wrapper .form-description, 
-  aside .content-wrapper .form {
-    width: 
-    margin: 0; 
-  }
-
-/* Features */
-
-.features article {
-  display: flex;
-  justify-content: center; 
-  align-items: center; 
-  flex-flow: row wrap; 
-  flex-basis: 
-}
-
-.features .features-item-description {
-  width: 
-}
-
-/* Reviews */
-
-.reviews article {
-  display: flex; 
-  justify-content: center; 
-}
-
-.reviews article div {
-  width:
-}
-
-/* FAQ */
-
-.faq-content {
-  flex-basis: 
-}
-
-/* Footer */
-
-footer .content-wrapper {
-  width: 
-  margin: 100px 0; 
-}
-
-.footer-content {
-  display: flex;
-  justify-content: center;
-  align-items: center; 
-}
-
-footer .contact {
-  margin-bottom: 0; 
-}
-
-footer .copyright {
-  width: 
-}
-
-
-/* ==========================================================================
-   About Page
-   ========================================================================== */
- 
-   .mission-content {
-    display:
-    justify-content: space-between;
-    align-items: 
-}
-
-.mission-content p {
-    width: 
-}
-
-.contact-section .content-wrapper h2 {
-    width:
-}
-
-.contact-content {
-    display:
-    justify-content:
-    align-items:
-}
-
-
-/* ==========================================================================
-   FAQ Page
-   ========================================================================== */
-    .faq .content-wrapper {
-        justify-content: space-between;
-    }
-    
-    .faq-content {
-        flex-basis: 40%;
-    }
- 
-    .faq h2 {
-        width: 100%;
-    }
-
-
-
-}
-
-
-
-
-
-
-@media only screen and (min-width: 1200px) {
-  /* Desktop styles here */
-}
 
 
 
