--- a/css/main.css
+++ b/css/main.css
@@ -100,17 +100,35 @@ header, footer {
   flex-flow: row wrap; 
 }
 
+header {
+  padding: 15px 0; 
+}
+
 
 header .content-wrapper {
   display: flex; 
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
+  margin: 0; 
+}
+
+.header-divider {
+  width: 100%; 
 }
 
 header nav {
+  width: 60%; 
+  text-decoration: none; 
+  padding: 25px 0; 
+}
+
+header nav ul {
   display: flex; 
-  flex-flow: row wrap;
+  justify-content: space-evenly; 
+  list-style-type: none;
+  margin: 0;
+  padding: 0; 
 }
 
 .hero-area h1 {
@@ -147,6 +165,18 @@ aside .form {
   flex-flow: row wrap;
 }
 
+.features article {
+  width: 45%; 
+  display: flex; 
+  justify-content: center;
+  align-items: center; 
+  padding-left: 90px; 
+}
+
+.features p {
+  margin: 0; 
+}
+
 .reviews {
   display: flex; 
   justify-content: center;
@@ -161,6 +191,14 @@ aside .form {
   flex-flow: row wrap;
 }
 
+.reviews h3 {
+  width: 50%; 
+}
+
+footer .content-wrapper {
+  width: 55%;
+  margin: 50px 0; 
+}
 
 footer .contact {
   width: 100%; 
@@ -173,6 +211,7 @@ footer h4 {
 
 footer p {
   text-align: center; 
+  margin: 0;
 }
 
 
@@ -290,6 +329,82 @@ footer .social {
 .clearfix::after {
   clear: both;
 }
+
+
+
+
+
+/* ==========================================================================
+   EXAMPLE Media Queries for Responsive Design.
+   These examples override the primary ('mobile first') styles.
+   Modify as content requires.
+   ========================================================================== */
+
+
+/*** TABLET STYLES HERE ***/
+@media only screen and (min-width: 768px) {
+
+.content-wrapper {
+  max-width: 640px; 
+  margin: 100px 0; 
+}
+
+header {
+  background-color: lightblue;
+}
+
+header .content-wrapper {
+  width: ; 
+  background-color: lightgreen
+}
+
+  header nav {
+    background-color: lightcoral;
+}
+
+.hero-area {
+  background-color: #999;
+}
+
+.hero-area .content-wrapper {
+  background-color: #b3d4fc;
+}
+
+.features .content-wrapper {
+  width: ; 
+}
+
+.features article {
+  width: 22%; 
+}
+
+
+
+}
+
+
+
+
+
+
+
+/*** DESKTOP STYLES HERE ***/
+@media only screen and (min-width: 1200px) {
+
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
