Added all remaining styles for all three pages

--- a/css/main.css
+++ b/css/main.css
@@ -89,86 +89,6 @@ textarea {
 
 /*** MOBILE FIRST STYLES ***/
 
-/* -------------------- Base Header - Footer Styles -------------------- */
-
-header, footer {
-  display: flex; 
-  justify-content: center;
-  align-items: center; 
-  flex-flow: row wrap; 
-}
-
-header {
-  padding: 15px 0; 
-}
-
-
-header .content-wrapper {
-  display: flex; 
-  justify-content: center;
-  align-items: center;
-  flex-flow: row wrap;
-  margin: 0; 
-}
-
-.header-divider {
-  width: 100%; 
-  height: 1px;
-  margin: 10px 0 20px 0; 
-}
-
-header nav {
-  display: flex; 
-  justify-content: space-around;
-  align-items: center; 
-  width: 60%; 
-  text-decoration: none; 
-  padding: 25px 0; 
-}
-
-header nav ul {
-  display: flex; 
-  justify-content: space-around; 
-  width: 100%; 
-}
-
-footer {
-  flex-direction: column; 
-}
-
-
-footer p {
-  margin: 0;
-}
-
-footer .content-wrapper {
-  width: 55%;
-  margin: 50px 0; 
-}
-
-footer .contact {
-  margin-bottom: 50px;  
-}
-
-footer .social-icons {
-  display: flex; 
-  justify-content: space-around; 
-  align-items: center; 
-}
-
-footer .social-icons p {
-  display: flex;
-  justify-content: center;
-  align-items: center; 
-}
-
-footer .copyright {
-  margin: 20px 0; 
-}
-
-
-/* -------------------- Mobile Styles - Homepage -------------------- */
-
 /* General Styles */
  
 html {
@@ -179,6 +99,7 @@ body {
   font-family: 'Open Sans', sans-serif;
   font-size: 1em; 
   text-align: left; 
+  color: #e2e3ed;
 }
  
 ul, 
@@ -230,10 +151,94 @@ address {
   margin: 50px 0; 
 }
 
+/*-------------------END GENERAL STYLES SECTION----------------------*/
 
 
+/* -------------------- Base Header - Footer Styles -------------------- */
 
-/* Hero Area */
+header, footer {
+  background-color: #202322;
+  color: #ffffff;
+  display: flex; 
+  justify-content: center;
+  align-items: center; 
+  flex-flow: row wrap; 
+}
+
+header {
+  padding: 15px 0;  
+}
+
+
+header .content-wrapper {
+  margin: 0; 
+  display: flex; 
+  justify-content: center;
+  align-items: center;
+  flex-flow: row wrap;
+}
+
+.header-divider {
+  background: #3a3a3a; 
+  width: 100%; 
+  height: 1px;
+  margin: 10px 0 20px 0; 
+}
+
+header nav {
+  width: 60%; 
+  font-size: 1.25em; 
+  font-weight: 700; 
+  text-transform: uppercase; 
+  display: flex; 
+  justify-content: space-around;
+  align-items: center; 
+  flex-flow: row wrap; 
+  padding-right: 30px;
+}
+
+header nav ul {
+  display: flex; 
+  justify-content: space-around; 
+  width: 100%; 
+}
+
+footer {
+  text-align: center; 
+  flex-direction: column; 
+}
+
+footer p {
+  margin: 0;
+}
+
+footer .content-wrapper {
+  width: 55%;
+  margin: 50px 0; 
+}
+
+footer .contact {
+  margin-bottom: 50px;  
+}
+
+footer .social-icons {
+  display: flex; 
+  justify-content: space-around; 
+  align-items: center; 
+}
+
+footer .social-icons p {
+  display: flex;
+  justify-content: center;
+  align-items: center; 
+}
+
+footer .copyright {
+  margin: 20px 0; 
+}
+
+
+/* -------------------- Mobile Styles - Homepage -------------------- */
 
 .hero-area {
   display: flex;  
@@ -241,20 +246,63 @@ address {
   flex-flow: row wrap; 
 }
 
+.hero-area h1 {
+  font-size: 2.25em;
+  font-family: 'Poppins', Helvetica, Arial, sans-serif;
+  font-weight: 500; 
+  line-height: 1.2; 
+}
+
 /* Aside */
 
 aside {
+  background-color: #527158;
   display: flex; 
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
 }
 
+aside .form {
+  margin-top: 30px;
+}
+ 
+input[type=text] {
+  box-sizing: border-box;
+  width: 100%;
+  color: #2a423a;
+  font-style: italic;
+  padding: 1em;
+}
+ 
+input[type=button] {
+  width: 100%;
+  padding: 20px 0;
+  margin-top: 20px;
+  background-color: #2a423a;
+  font-family: 'Poppins', Helvetica, Arial, sans-serif;
+  font-weight: 500;
+  font-size: 1.125em;
+  color: #e2e3ed;
+  border: none;
+  text-align: center;
+  text-transform: uppercase;
+} 
+
 /* Features */
 .features {
   display: flex; 
   justify-content: center;
   flex-flow: row wrap;
+}
+
+.features h2 {
+  margin-bottom: 60px; 
+}
+
+.features article {
+  width: 63%; 
+  margin: 30px 0; 
 }
 
 .features .features-items {
@@ -264,21 +312,14 @@ aside {
   flex-flow: row wrap; 
 }
 
-.features article {
-  width: 63%; 
-  margin: 30px 0; 
-}
-
-.features h2 {
-  margin-bottom: 60px; 
-}
-
 .features p {
+  text-align: center;
   margin: 0; 
 }
 
 /* Reviews */
 .reviews {
+  background-color: #2a423a; 
   display: flex; 
   justify-content: center;
   flex-flow: row wrap;
@@ -286,6 +327,7 @@ aside {
 
 .reviews h2 {
   margin-bottom: 40px; 
+  line-height: 1;
 }
 
 .reviews h3 {
@@ -298,26 +340,46 @@ aside {
 /*** -----------------------------Mobile Styles - ABOUT PAGE---------------------------------------- ***/
 
 .mission {
+  background-color: #527158;
   display: flex; 
   justify-content: center;
   align-items: center;
   flex-flow: row wrap; 
 }
 
+.mission h2 {
+  font-weight: 500; 
+}
+
 .contact-section {
+  background-color: #2a423a;
   display: flex;  
   justify-content: center;
   align-items: center;
   flex-flow: row wrap; 
 }
 
+.contact-section h2 {
+  font-family: 'Poppins', sans-serif;
+  font-weight: 500;
+  font-size: 1.875em; 
+}
+
 .contact-content p {
   margin: 0;
+}
+
+.contact-content {
+  font-family: 'Poppins', sans-serif;
+  font-weight: 500;
+  font-size: 1.125em;
+  margin: 20px 0;
 }
 
 /*** -------------------------------------Mobile Styles - FAQ PAGE--------------------------------------- ***/
 
 .faq {
+  background-color: #527158;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -334,10 +396,15 @@ aside {
 
 .faq h2 {
   margin-bottom: 40px;
+  line-height: 1; 
 }
 
 .faq-content {
   margin-bottom: 50px;
+}
+
+.faq-content h4 {
+  line-height: 1.333; 
 }
 
 
@@ -448,6 +515,16 @@ aside {
   margin: 100px 0; 
 }
 
+h2 {
+  font-size: 2.25em; 
+  line-height: 1.333; 
+}
+
+h3 {
+  font-size: 1.5em; 
+  line-height: 1.25; 
+}
+
 /* Header */
 header {
   justify-content: space-around; 
@@ -457,6 +534,10 @@ header {
 header .content-wrapper {
   width: 100%; 
   justify-content: space-between; 
+}
+
+header figure {
+  width: 30%; 
 }
 
 header nav {
@@ -473,6 +554,12 @@ header nav ul {
 
 /* Hero Area */
 
+.hero-area h1 {
+  font-size: 3em;
+  line-height: 1;
+  margin: 0;
+}
+
 /* Aside */
 aside .content-wrapper {
   display: flex; 
@@ -488,6 +575,11 @@ aside .content-wrapper .form {
 }
 
 /* Features */
+
+.features h2 {
+  margin-bottom: 20px; 
+}
+
 .features article {
   display: flex; 
   justify-content: center; 
@@ -497,7 +589,7 @@ aside .content-wrapper .form {
 }
 
 .features .features-item-description {
-  width: 50%; 
+  width: 62%; 
 }
 
 /* Reviews */
@@ -506,8 +598,17 @@ aside .content-wrapper .form {
   justify-content: space-between; 
 }
 
+.reviews h2 {
+  width: 85%; 
+}
+
 .reviews article div {
   width: 49%; 
+}
+
+.reviews h3 {
+  width: 75%;
+  margin: 0; 
 }
 
 /* Footer */
@@ -516,14 +617,24 @@ footer .content-wrapper {
   margin: 100px 0; 
 }
 
-.footer-content {
+footer .footer-content {
   display: flex; 
   justify-content: space-between; 
   align-items: center; 
+  flex-direction: row; 
 }
 
 footer .contact {
   margin-bottom: 0; 
+}
+
+footer h4 {
+  font-size: 1.5em; 
+  margin-bottom: 40px; 
+}
+
+footer p {
+  line-height: 1.285; 
 }
 
 footer .copyright {
@@ -537,8 +648,6 @@ footer .copyright {
    About Page
    ========================================================================== */
  
-
-
    .mission-content {
         display: flex; 
         justify-content: space-between;
@@ -558,7 +667,11 @@ footer .copyright {
         display: flex; 
         justify-content: space-between; 
         align-items: flex-start; 
-}
+    }
+
+    .contact-content h4 {
+        font-size: 1.5em; 
+    }
 
 
    /* ==========================================================================
@@ -576,29 +689,46 @@ footer .copyright {
     .faq h2 {
       width: 100%;
     }
-  
+    .faq h4, 
+    .faq p {
+      font-size: .875em; 
+      line-height: 1.125; 
+    }
 
 
 }
 
 
-
-
+@media only screen and (min-width: 1200px) {
 /*** DESKTOP STYLES HERE ***/
 
-/* HOMEPAGE */
-
-@media only screen and (min-width: 1200px) {
-
   /* General Styles */
+header {
+  padding: 15px 0; 
+}
 
 .content-wrapper {
   max-width: 960px;
 }
 
+h2 {
+  font-size: 2.25em; 
+}
+
+h3, h4 {
+  font-size: 1.875em; 
+}
+
+p {
+  font-size: 1.125em;
+  line-height: 1.333; 
+}
+
+
   /* Hero */
   .hero-area h1 {
     width: 60%;
+    font-size: 3.75em; 
 }
 
 /* Aside */
@@ -611,14 +741,11 @@ aside .content-wrapper .form {
   width: 30%;
 }
 
-/* Features */
-.features .features-items {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-flow: row wrap; 
+.form-description p {
+  font-size: 1.125em; 
 }
 
+/* Features */
 
 .features article {
   flex-basis: 33%; 
@@ -629,9 +756,18 @@ aside .content-wrapper .form {
 }
 
   /* Reviews */
+  .reviews h2 {
+    padding-bottom: 50px; 
+  }
+
   .reviews article div {
     width: 42%;
   }
+
+  footer h4 {
+    font-size: 1.875em; 
+  }
+
 
 /* ==========================================================================
    About Page
@@ -640,6 +776,11 @@ aside .content-wrapper .form {
    .mission h2,
    .contact-section .content-wrapper h2 {
        width: 95%;
+       font-size: 3em; 
+   }
+
+   .contact-content h4 {
+     font-size: 1.875em; 
    }
 
 /* ==========================================================================
@@ -647,7 +788,15 @@ aside .content-wrapper .form {
    ========================================================================== */
    .faq h2 {
     width: 100%;
+    font-size: 3em; 
   }
+   .faq h4, 
+   .faq p {
+     font-size: 1.125em; 
+     line-height: 1; 
+   }
+
+
 
 }
 
