--- a/css/main.css
+++ b/css/main.css
@@ -371,7 +371,7 @@ input[type=button] {
 .map figure {
   width: 100%; 
   height: 0; 
-  padding-bottom: 125%; 
+  padding-bottom: 100%; 
   overflow: hidden;
   position: relative;
 }
@@ -705,6 +705,23 @@ footer .copyright {
     .mission-content p {
         width: 45%; 
     }
+
+    .map figure {
+      width: 100%; 
+      height: 0; 
+      padding-bottom: 50%; 
+      overflow: hidden;
+      position: relative;
+    }
+    
+    .map iframe {
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      top: 0;
+      left: 0; 
+    }
+    
  
     .contact-section .content-wrapper h2 {
         width: 80%; 
